--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,13 @@ html {
   font-size: 62.5%;
 }
 
+figure {
+  margin: 0;
+}
 img {
   max-inline-size: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
 }
 /* end of css reset */
 
@@ -25,6 +29,7 @@ main {
   main {
     max-width: 120rem;
     margin: 0 auto;
+    padding: 0;
   }
 }
 
@@ -35,14 +40,20 @@ main {
 /* Css variables */
 /* typography */
 :root {
-  --tittle-font: 5.2rem;
-  --tittle-height: 7rem;
+  --heading1-font: 5rem;
+  --heading1-height: 6.5rem;
+  --heading2-font: 3.2rem;
+  --subtittle-font: 1.6rem;
+  --subtittle-height: 2.25rem;
+  --subtittle-space: 0.1rem;
+  --arrow-size: 3rem;
 }
 
 @media screen and (min-width: 768px) {
   :root {
-    --tittle-font: 6rem;
-    --tittle-height: 8rem;
+    --heading1-font: 6rem;
+    --heading1-height: 8rem;
+    --heading2-font: 3.8rem;
   }
 }
 
@@ -74,40 +85,72 @@ https://i.postimg.cc/k5qHRc5H/video.png */
 .hero-container {
   display: grid;
   /* grid-template-columns: 2fr 3fr; */
-  row-gap: 4em;
+  row-gap: 2em;
   align-items: center;
 }
 .hero-description__tittle {
   margin: 0;
-  font-size: var(--tittle-font);
-  line-height: var(--tittle-height);
+  font-size: var(--heading1-font);
+  line-height: var(--heading1-height);
 }
 .hero-description__text {
-  font-size: 1.6rem;
-  line-height: 2.25rem;
-  letter-spacing: 0.1rem;
+  font-size: var(--subtittle-font);
+  line-height: var(--subtittle-height);
+  letter-spacing: var(--subtittle-space);
 }
 
 .primary-button {
-  padding: 1em 1.5em;
+  display: flex;
+  align-items: center;
+  gap: 0.3em;
+  padding: 0.5em 1.5em;
   border-radius: 2.5rem;
   border: none;
   background-color: #ff4400;
   color: #fff;
-  font-size: 1.6rem;
+  font-size: 2rem;
   cursor: pointer;
 }
+
+.bx-right-arrow-alt {
+  font-size: var(--arrow-size);
+}
+
 .hero-plate-container__img {
   justify-self: center;
-  /* height: 60%; */
-  object-fit: contain;
 }
+
+/* Our services section */
+.services__tittle {
+  margin-top: 5.2rem;
+  text-align: center;
+  font-size: var(--heading2-font);
+}
+.services-grid-container {
+  display: grid;
+  justify-content: center;
+  gap: 2em;
+}
+.services__video {
+  grid-column: 1 / 3;
+}
+
+/* Large screens Media Queries  */
 @media screen and (min-width: 768px) {
+  /* Hero section */
   .hero-container {
     grid-template-columns: 2fr 3fr;
     grid-auto-rows: 100vh;
   }
   .hero-plate-container__img {
     height: 60%;
+  }
+
+  /* Our Sevices Section  */
+  .services-grid-container {
+    grid-template-columns: repeat(4, minmax(75px, 1fr));
+  }
+  .services__video {
+    grid-area: 1 / 1 / 3 / 3;
   }
 }
