--- a/styles.css
+++ b/styles.css
@@ -17,13 +17,13 @@ figure {
 img {
   max-inline-size: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 /* end of css reset */
 
 main {
   font-family: 'Roboto', sans-serif;
-  padding: 2em 2em;
+  padding: 3em;
 }
 @media screen and (min-width: 1200px) {
   main {
@@ -38,8 +38,8 @@ main {
 }
 
 /* Css variables */
-/* typography */
 :root {
+  /* typography */
   --heading1-font: 5rem;
   --heading1-height: 6.5rem;
   --heading2-font: 3.2rem;
@@ -47,6 +47,8 @@ main {
   --subtittle-height: 2.25rem;
   --subtittle-space: 0.1rem;
   --arrow-size: 3rem;
+  /* colors */
+  --primary-color: #ff4400;
 }
 
 @media screen and (min-width: 768px) {
@@ -106,7 +108,7 @@ https://i.postimg.cc/k5qHRc5H/video.png */
   padding: 0.5em 1.5em;
   border-radius: 2.5rem;
   border: none;
-  background-color: #ff4400;
+  background-color: var(--primary-color);
   color: #fff;
   font-size: 2rem;
   cursor: pointer;
@@ -135,6 +137,21 @@ https://i.postimg.cc/k5qHRc5H/video.png */
   grid-column: 1 / 3;
 }
 
+/* Home Menu section */
+.menu-grid-container {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, 260px);
+  gap: 2em;
+}
+.plate {
+  background-color: rgb(255, 68, 0, 0.2);
+  border-radius: 4em 0 4em 0em;
+}
+.plate:nth-child(even) {
+  border-radius: 0em 4em 0em 4em;
+}
+
 /* Large screens Media Queries  */
 @media screen and (min-width: 768px) {
   /* Hero section */
@@ -152,5 +169,10 @@ https://i.postimg.cc/k5qHRc5H/video.png */
   }
   .services__video {
     grid-area: 1 / 1 / 3 / 3;
+  }
+
+  /* Home Menu Section */
+  .menu-grid-container {
+    grid-template-columns: repeat(auto-fit, 224px);
   }
 }
